--- a/RunGroupWebApp/Views/Race/Index.cshtml
+++ b/RunGroupWebApp/Views/Race/Index.cshtml
@@ -27,6 +27,7 @@
                 @*<p class="card-text">@club.Address.City, @club.Address.State</p>*@
             </div>
             <div class="card-footer card-footer-borderless d-flex justify-content-between">
+                <a class="btn btn-sm btn-outline-info" type="button" asp-asp-controller="club" asp-action="detail" asp-route-id="@race.Id">Details</a>
 
                 @*@if (isAuthenticated && User.IsInRole("admin"))
             {
