--- a/RunGroupWebApp/Views/Race/Create.cshtml
+++ b/RunGroupWebApp/Views/Race/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using RunGroupWebApp.Data.Enum;
 @using RunGroupWebApp.ViewModels;
-@model CreateClubViewModel
+@model CreateRaceViewModel
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
@@ -19,13 +19,12 @@
         <input asp-for="Description" class="form-control" placeholder="Description">
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
-    
     <div class="form-group">
-        <label asp-for="ClubCategory">ClubCategory</label>
-        <select asp-for="ClubCategory" asp-items="@Html.GetEnumSelectList<ClubCategory>()" class="form-control form-control-lg">
+        <label asp-for="RaceCategory">RaceCategory</label>
+        <select asp-for="RaceCategory" asp-items="@Html.GetEnumSelectList<RaceCategory>()" class="form-control form-control-lg">
             <option>--Select--</option>
         </select>
-        <span asp-validation-for="ClubCategory" class="text-danger"></span>
+        <span asp-validation-for="RaceCategory" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Address.Street">Street</label>
@@ -44,7 +43,7 @@
     </div>
     <div class="form-group">
         <label asp-for="Image">Image</label>
-        <input type="file" asp-for="Image" class="form-control" placeholder="Image">
+        <input asp-for="Image" type="file" class="form-control" placeholder="Image">
         <span asp-validation-for="Image" class="text-danger"></span>
     </div>
   <button type="submit" class="btn btn-primary">Submit</button>
