--- a/RunGroupWebApp/Views/Club/Index.cshtml
+++ b/RunGroupWebApp/Views/Club/Index.cshtml
@@ -32,6 +32,7 @@
                         <small>@club.ClubCategory</small>
                     </div>
                     <a class="btn btn-sm btn-outline-info" type="button" asp-asp-controller="club" asp-action="detail" asp-route-id="@club.Id">Details</a>
+                    <a class="btn btn-sm btn-outline-info" type="button" asp-asp-controller="club" asp-action="edit" asp-route-id="@club.Id">Edit</a>
                     @*@if (isAuthenticated && User.IsInRole("admin"))
                     {
                         <div>
