--- a/RunGroupWebApp/Views/Dashboard/Index.cshtml
+++ b/RunGroupWebApp/Views/Dashboard/Index.cshtml
@@ -28,11 +28,11 @@
                                 <div class="btn-group">
                                     <a type="btn btn-success" asp-controller="Club" asp-action="Detail" asp-route-id="@item.Id"
                                    class="btn btn-sm btn-outline-secondary">View</a>
-@*                                    @if (SignInManager.IsSignedIn(User))
+                                    @if (User.Identity.IsAuthenticated)
                                     {
                                         <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
                                         <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
-                                    }*@
+                                    }
                                 </div>
                                 <small class="text-muted">@item.RaceCategory</small>
                             </div>
@@ -55,11 +55,11 @@
                                 <div class="btn-group">
                                     <a type="btn btn-success" asp-controller="Club" asp-action="Detail" asp-route-id="@item.Id"
                                    class="btn btn-sm btn-outline-secondary">View</a>
-@*                                    @if (SignInManager.IsSignedIn(User))
+                                    @if (User.Identity.IsAuthenticated)
                                     {
                                         <a asp-controller="Club" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
                                         <a asp-controller="Club" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
-                                    }*@
+                                    }
                                 </div>
                                 <small class="text-muted">@item.ClubCategory</small>
                             </div>
