--- a/RunGroupWebApp/Views/Shared/_Layout.cshtml
+++ b/RunGroupWebApp/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="account" asp-action="logout">
+                                <a class="btn btn-sm btn-outline-danger" asp-area="" asp-controller="account" asp-action="logout">
                                    <span class="h6 mb-0">Logout</span>
                                  </a>
                              </li>
